2007-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Remove table tags that
	surround image tags.

2007-08-21  Eugene Oleinik  <eo@aoizora.org>

	* shimbun.el (shimbun-header-insert-and-buffer-string): Make charset
	default to UTF-8.

2007-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-x-face-alist): Update default face.

2007-08-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-article-1): Replace xref with a real url that
	ITmedia site requires for a referer.

2007-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnshimbun.el (gnus-group-make-shimbun-group): Use encoded group name
	when accessing it as an ephemeral group; don't kill group that isn't
	ephemeral; pass group name that isn't encoded to gnus-group-make-group.
	(gnus-group-make-shimbun-groups): Pass group name that isn't encoded to
	gnus-group-make-group.

2007-08-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-nikkei-group-table): Update url for gyosuuchi
	group.
	(shimbun-nikkei-get-headers-it-default)
	(shimbun-nikkei-get-headers-it-pc)
	(shimbun-nikkei-get-headers-release2): Don't quit searching for headers
	in the first index page.
	(shimbun-nikkei-get-headers-bunkatsu2): Update regexp and base url.
	(shimbun-nikkei-get-headers-retto, shimbun-nikkei-get-headers-newpro):
	Update regexps.

2007-08-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-nikkei-group-table): Use
	shimbun-nikkei-prepare-article-default instead of
	shimbun-nikkei-prepare-article-top for the top group.
	(shimbun-nikkei-x-face-alist): Update.
	(shimbun-nikkei-expand-url): Regard url that begins with slash as
	absolute path.
	(shimbun-nikkei-get-headers-default, shimbun-nikkei-get-headers-top):
	Rewrite.
	(shimbun-nikkei-get-headers-shasetsu): Fix regexp.
	(shimbun-nikkei-prepare-article-default-0): Rename from
	shimbun-nikkei-prepare-article-default.
	(shimbun-nikkei-prepare-article-default): Rename from